--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -343,11 +343,11 @@ margin-bottom: 0.5em;
   text-overflow:initial;
   white-space: normal;
   overflow: visible;
-  max-height: 250px;
+  max-height: 420px;
+  height: 420px;
   background-color:#7572c7;
   color:white;
-  transition: all ease-in-out 850ms;
-  max-height:280px;
+  transition: all ease-in-out 750ms;
   margin-top: 5%;
   padding: 1em;
 
@@ -403,17 +403,18 @@ border-radius: 5%;
   display: flex;
   height: auto;
   background-color: #ececec;
-  flex-direction: row;
+  flex-direction: column;
   flex: 1 100%;
-  row-gap: 15%;
+  row-gap: 5%;
   padding: 50px;
+  height: 100vh;
 }
 
 .productAdjustTemp {
   display: flex;
   flex-direction: column;
   gap: 2em;
-  flex: 60%;
+  flex: 2;
   color: #7572c7;
   font-family: "Merriweather", serif;
 }
@@ -449,16 +450,20 @@ border-radius: 5%;
 
 .productPicture {
   display: flex;
-  flex: 60%;
-  gap: 0.5em;
-  flex-wrap: wrap;
+  flex: 4;
+  flex-wrap:wrap;
 }
 
 .productPicture img {
   width: 225px;
   height: auto;
   border-radius: 10%;
-  
+  padding: 15px; 
+}
+
+.moreProducts{
+  display: flex;
+  flex: 5;
 }
 
 /* Stylesheet for Contact Us */
@@ -467,7 +472,7 @@ border-radius: 5%;
   display: flex;
   background-color: #ececec;
   flex-direction: column;
-  height: 90vh;
+  height: 120vh;
 }
 
 .topContainer {
@@ -547,6 +552,28 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #5a57b6;
 }
+
+.findUs{
+  margin-top: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #7572c7;
+  font-size: 1.5em;
+}
+
+.findUs p{
+  font-size: 1em;
+  font-style: italic;
+}
+
+.findUs img{
+  width: 1000px;
+  height: auto;
+  border-radius: 3%;
+  margin-bottom: 2%;
+}
+
 
 /*Stylesheet for contactSubmit*/
 
